# lidar

./: .gitignore  CMakeLists.txt  README.md  package.xml  rviz_config.rviz
rosbags/: sample_still_lidar.bag  single_scan_raw.bag
scripts/: feature_serv.py  mean_shift_features.py  plot_lidar.py  plot_points.py
src/: pcl_demo.cpp  plot_lidar.py  pointcloud_processor.cpp
